<resources>

    <string name="app_name">Android Practice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_id">Order Id: %d</string>
    <string name="order_customer_name">Customer Name: %s</string>
    <string name="order_item">Item: %s</string>

    <!-- AsyncListUtil -->
    <string name="async_list_util_loading">Loading</string>

    <!-- Handler Leak -->
    <string name="handler_leak_title">This is the example of handler leak.</string>
    <string name="handler_no_leak_title">This is the example of handler no leak.</string>
    <string name="handler_leak_calculating">Calculating</string>
    <string name="handler_leak_count_text">count = %d</string>
    <string name="handler_leak_description">You can observe LeakCanary after clicking Plus and Close. If LeakCanary popups the warning notification, it means that the memory leak happened somewhere in the app.</string>
    <string name="handler_leak_plus_and_close">Plus and Close</string>

    <!-- Download Manager -->
    <string name="download_manager_description">Click download button to start downloading the file from FileSamples.</string>
    <string name="download_manager_download_button">Download</string>
    <string name="download_manager_downloading">Downloading…</string>
    <string name="download_manager_downloaded">Downloaded</string>
    <string name="download_manager_log_title">Detail Log</string>

</resources>
