<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/downloadManagerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_manager_description"
        android:textSize="16sp"
        android:lineSpacingExtra="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/downloadManagerDownloadButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/download_manager_download_button"
        app:layout_constraintTop_toBottomOf="@id/downloadManagerDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/downloadManagerLogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/download_manager_log_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/downloadManagerDownloadButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/downloadManagerLogDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/downloadManagerLogTitle"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="The log will be shown here."/>

</androidx.constraintlayout.widget.ConstraintLayout>